# Fall-In

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  fall_in.spec  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yaml  test.yaml
assets/: LICENSE.md
contributing/: ASSET_SPECIFICATIONS.md  CONTRIBUTING.md
data/: collected_soldiers.json  dialogues.json  medals.json  player_data.json  soldiers.json
scripts/: fix_sprite_splits.py  split_sprite_sheets.py
src/fall_in/: __init__.py  config.py  main.py
src/fall_in/ai/: __init__.py  ai_player.py
src/fall_in/core/: __init__.py  audio_manager.py  board.py  card.py  debug_manager.py  ending_manager.py  game_manager.py  medal_manager.py  player.py  prestige_manager.py  rules.py  smuggling_manager.py
src/fall_in/data/: __init__.py  loading_tips.py  soldier_data.py
src/fall_in/entities/: __init__.py  battalion_card.py  commander.py  dust_particle.py  frozen_food.py  soldier_figure.py
src/fall_in/scenes/: base_scene.py  collection_cutscene_scene.py  collection_loading_scene.py  debug_scene.py  game_loading_scene.py  game_over_cutscene_scene.py  game_over_scene.py  game_scene.py  intro_cutscene_scene.py  prestige_scene.py  recruitment_scene.py  result_scene.py  smuggling_scene.py  title_debug_scene.py  title_scene.py
src/fall_in/ui/: button.py  game_over_gallery_popup.py  player_info_popup.py  settings_popup.py  speech_bubble.py
tests/: __init__.py  test_board.py  test_card.py
(+7 files in other folders)
